# simple-path-rendering

./: .gitignore  Cargo.toml  LICENSE  README.md
data/shaders/: curve.frag  curve.vert  quad_curve_stroke.frag  quad_curve_stroke.vert  triangle.frag  triangle.vert
src/: main.rs
src/path/: generated_gl.rs  mesh.rs  mod.rs  path.rs  path_painter.rs  primitives.rs  renderer.rs
